# outs_homework_16

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
mysite/mysite/: settings.py
mysite/polls/tests/: test_views.py
src/: db.sqlite3
src/mysite/: settings.py  urls.py
src/polls/: admin.py  models.py  tests.py  views.py
src/polls/migrations/: 0001_initial.py
